# docdeid

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  format.yml  test.yml
docdeid/: __init__.py  annotation.py  deidentifier.py  direction.py  document.py  pattern.py  tokenize.py  tokenizer.py  utils.py
docdeid/ds/: __init__.py  ds.py  lookup.py
docdeid/process/: __init__.py  annotation_processor.py  annotation_set.py  annotator.py  doc.py  doc_processor.py  redactor.py
docdeid/str/: __init__.py  expander.py  processor.py
docs/: conf.py
docs/source/: environment.md  index.md  links.md  tutorial.md
docs/source/media/: docdeid-arch.drawio
tests/: conftest.py
tests/data/: name_list.txt
tests/fixtures/: fixtures.py
tests/pipeline/: test_pipeline.py
tests/unit/: test_annotation.py  test_deidentifier.py  test_direction.py  test_document.py  test_tokenize.py  test_tokenizer.py  test_utils.py
tests/unit/ds/: test_ds.py  test_lookup.py
tests/unit/process/: test_annotation.py  test_annotation_processor.py  test_annotator.py  test_doc.py  test_doc_processor.py  test_redactor.py
tests/unit/str/: test_str.py
