[tool.poetry]
name = "docdeid"
version = "1.0.1"
description = "Create your own document de-identifier using docdeid, a simple framework independent of language or domain."
license = "MIT"
authors = [
    "Vincent Menger <vmenger@protonmail.com>"
    ]
readme = "README.md"
keywords = ["python", "document de-identification", "de-identification", "document de-identifier", "de-identifier"]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    ]

include = ["docdeid/py.typed"]


[tool.sphinx]
author = "Vincent Menger"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.23.1, <3.0"
frozendict = "^2.3.10"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
flake8-annotations = "^2.9.1"
pylint = "^2.12.1"
isort = "^5.10.1"
black = "^22.8.0"
mypy = "^0.982"
docformatter = "^1.5.0"
flake8-pyproject = "^1.2.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = {version = "^5.2.3"}
furo = {version = "^2022.9.29"}
toml = "^0.10.2"
myst-parser = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true
in-place = true
black = true
pre-summary-newline = true

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'ANN101', 'ANN102', 'ANN002', 'ANN003', 'DC100']
per-file-ignores = [
    'tests/conftest.py:F401,F403',
    '__init__.py:F401',
    'tests/*:ANN,DC',
]

[tool.pylint]
disable = ['C0114']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=docdeid --cov-fail-under=85"